diesel_compile_tests/tests/fail/insertable_missing_table_or_column.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `posts`
  --> $DIR/insertable_missing_table_or_column.rs:11:8
   |
11 | struct Post {
   |        ^^^^ use of undeclared crate or module `posts`

error[E0433]: failed to resolve: use of undeclared crate or module `posts`
  --> $DIR/insertable_missing_table_or_column.rs:16:23
   |
16 | #[diesel(table_name = posts)]
   |                       ^^^^^ use of undeclared crate or module `posts`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:24:5
   |
24 |     name: String,
   |     ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:24:5
   |
24 |     name: String,
   |     ^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:30:28
   |
30 |     #[diesel(column_name = name)]
   |                            ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> $DIR/insertable_missing_table_or_column.rs:30:28
   |
30 |     #[diesel(column_name = name)]
   |                            ^^^^ not found in `users`
